--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -60,8 +60,8 @@ block content
                       span.glyphicon.glyphicon-star
                       span.glyphicon.glyphicon-star
                       span.glyphicon.glyphicon-star
-                    span.reviewAuthor Simon Holmes
-                    small.reviewTimestamp 16 July 2013
+                    span.reviewAuthor Saqlain Gardezi
+                    small.reviewTimestamp 06 February 2017
                   .col-xs-12
                     p What a great place. I can't say enough good things about it.
               .row
