--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app="locatorApp")
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
@@ -27,5 +27,8 @@ html
         .row
         .col-xs-12
           small &copy; SyedSaqlainGardezi 2017
+    script(src='/angular/angular.min.js')
+    script(src='/angular/locatorApp.js')
     script(src='https://code.jquery.com/jquery-1.x-git.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
