Dynamic front end added/ working geo location functionality

--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -13,13 +13,13 @@ block content
       input#filter(type="text", name="filter", ng-model="textFilter")
       .error {{message}}
       .row.list-group
-        .col-xs-12.list-group-item(ng-repeat="location in data.locations  | filter : textFilter")
+        .col-xs-12.list-group-item(ng-repeat="location in data  | filter : textFilter")
           h4
             a(href="/location/{{location._id}}") {{location.name}}
             small(rating-stars, rating="location.rating")
             
             span.badge.pull-right.badge-default {{location.distance | formatDistance}}
-          p.address{{ location.address}}
+          p.address{{ location.address}}  
           p
             
               span.label.label-warning.label-facility(ng-repeat="facility in location.facilities")
