--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -28,7 +28,7 @@ html(ng-app="locatorApp")
         .col-xs-12
           small &copy; SyedSaqlainGardezi 2017
     script(src='/angular/angular.min.js')
-    script(src='/angular/locatorApp.js')
+    script(src='/app.js')
     script(src='https://code.jquery.com/jquery-1.x-git.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
