--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -21,14 +21,20 @@ html(ng-app="locatorApp")
               a(href='/about') About
 
     .container
-      block content
+      div(ng-view)
+        block content
 
       footer
         .row
         .col-xs-12
           small &copy; SyedSaqlainGardezi 2017
     script(src='/angular/angular.min.js')
+    script(src='/lib/angular-route.min.js')
     script(src='/app.js')
+    script(src='home/home.controller.js')
+    script(src='/common/services/locatorData.service.js')
+    script(src='/common/services/geolocation.service.js')
+    script(src='/common/directives/ratingStars/ratingStars.directive.js')
     script(src='https://code.jquery.com/jquery-1.x-git.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
