--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -37,7 +37,8 @@ block content
             .panel-heading
               h2.panel-title Location map
             .panel-body
-              img.img-responsive.img-rounded(src="http://maps.googleapis.com/maps/api/staticmap?center=#{location.coords.lat},#{location.coords.lng}&zoom=17&size=400x350&sensor=false&markers=#{location.coords.lat},#{location.coords.lng}&scale=2")
+              img.img-responsive.img-rounded(src="https://maps.googleapis.com/maps/api/staticmap?center="+position.coords.latitude+","+position.coords.longitude+"&zoom=17&size=400x350&sensor=false")
+
 
 
       .row
