--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -28,15 +28,15 @@ html(ng-app="locatorApp")
         .row
         .col-xs-12
           small &copy; SyedSaqlainGardezi 2017
-  //-  script(src='/angular/locator.min.js')
+    script(src='/angular/locator.min.js')
     script(src='/angular/angular.min.js')
     script(src='/lib/angular-route.min.js')
-    script(src='/app.js')
-    script(src='home/home.controller.js')
-    script(src='/common/services/locatorData.service.js')
-    script(src='/common/services/geolocation.service.js')
-    script(src='/common/directives/ratingStars/ratingStars.directive.js')
-    script(src='/common/filters/formatDistance.filter.js')
+   //- script(src='/app.js')
+   //- script(src='home/home.controller.js')
+   //- script(src='/common/services/locatorData.service.js')
+   //- script(src='/common/services/geolocation.service.js')
+   //- script(src='/common/directives/ratingStars/ratingStars.directive.js')
+   //- script(src='/common/filters/formatDistance.filter.js')
     script(src='https://code.jquery.com/jquery-1.x-git.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
